# housing_finder

./: .env.template  .gitignore  Cargo.toml  README.md
src/: database.rs  fetch_data.rs  lib.rs  listing.rs  main.rs  send_email.rs
