[package]
name = "housing_finder"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
fantoccini = "0.21.5"
lettre = { version="0.11.17", features = ["smtp-transport", "builder"] }
reqwest = { version = "0.12.20", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version = "1.45.1", features = ["full"] }
